<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_una_cuenta"
        android:textColor="@color/black_login"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="10dp"
        android:background="#FFFFFF"
        android:hint="@string/email_address"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:paddingLeft="10dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="@+id/emailLogin"
        app:layout_constraintTop_toBottomOf="@id/emailLogin"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_login_screen_background"
        android:text="@string/crear_una_cuenta"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/ya_tienes_cuenta"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toBottomOf="@id/appCompatButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_login_screen_background"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:iconGravity="textStart"
        android:text="@string/continuar_con_google"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>